# postcard

./: .gitignore  CLAUDE.md  README.md  in.gxanshu.postbox.json  in.gxanshu.postbox.json~  justfile  meson.build  pyproject.toml  roadmap.md
.github/workflows/: release.yml
.zed/: settings.json
data/: in.gxanshu.postbox.desktop.in  in.gxanshu.postbox.gschema.xml  in.gxanshu.postbox.metainfo.xml.in  in.gxanshu.postbox.service.in  in.gxanshu.postcard.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: application.vala  fake-data.vala  main.vala  meson.build  postbox.gresource.xml  postbox.in  postcard.gresource.xml  shortcuts-dialog.blp  style.css  window.blp  window.ui  window.vala
src/postbox/: account-dialog.py  account_dialog.py  accounts_dialog.py  acounts_dialog.py  application.py  composer_window.py  conversation_row.py  fake_data.py  mail_sync.py  main.py  message_view.py  preferences_dialog.py  window.py
src/postbox/core/: compose.py  secrets.py  threader.py
src/postbox/core/mime/: message_parser.py
src/postbox/core/models/: account.py  attachment.py  conversation.py  email.py  folder.py
src/postbox/core/net/: errors.py  imap_session.py
src/postbox/core/store/: database.py
src/postcard/: account_dialog.py  application.py  composer_window.py  conversation_row.py  mail_send.py  mail_sync.py  message_view.py  preferences_dialog.py  signature_details_dialog.py  signature_indicator.py  window.py
src/postcard/core/crypto/: __init__.py  backend.py  service.py  subprocess_backend.py  types.py
src/postcard/core/mime/: message_parser.py  smime.py
src/postcard/core/models/: account.py  folder.py
src/postcard/core/net/: imap_session.py  smtp_session.py
src/postcard/core/store/: database.py
src/ui/: account-dialog.blp  accounts-dialog.blp  conversation-row.vala  main-window.blp  main-window.vala  preferences-dialog.blp  shortcuts-dialog.blp
tests/core/crypto/: test_subprocess_backend.py
